[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-fuzz-cli"
version = "0.1.0"
description = "Async LLM jailbreak / prompt-injection fuzzer for OpenAI-compatible chat completion endpoints."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Prasanna Kumar Surendran" }]
keywords = [
    "llm-security",
    "ai-security",
    "prompt-injection",
    "jailbreak",
    "guardrails",
    "red-team",
    "purple-team",
    "fuzzing",
    "openai",
    "llm-evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
prompt-fuzz = "promptfuzz.cli:app"

[project.urls]
Homepage = "https://github.com/Prasanna-27eng/prompt-fuzz"
Repository = "https://github.com/Prasanna-27eng/prompt-fuzz"

[tool.hatch.build.targets.wheel]
packages = ["src/promptfuzz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
